--- a/views/channel.jade
+++ b/views/channel.jade
@@ -8,9 +8,9 @@ block content
             form(method='get', action='chat')
                 label Canal:
                 input(type='text', name='channel')
-                if channels > 0
+                if channels.length > 0
                     select
                         each chn in channels
-                            option(name='channel') #{chn}
+                            option(name='channel') #{chn.name}
                 br
                 input(type='submit')
