--- a/views/user.jade
+++ b/views/user.jade
@@ -5,7 +5,7 @@ block content
         div(class='panel-heading')
             h2 #{title}
         div(class='panel-body')
-          form(name='userForm', method='post')
+          form(method='post')
               label Usuari:
-              input(type='text' name='name')
+              input(type='text', name='name')
               input(type='submit')
