--- a/views/channel.jade
+++ b/views/channel.jade
@@ -5,7 +5,7 @@ block content
         .panel-heading
             h2 #{title} - #{user.name}
         .panel-body
-            form(method='get', action='chat')
+            form(method='get', action='chat/#{user.name}')
                 label Canal:
                 input(type='text', name='newChannel')
                 if channels.length > 0
